[package]
name = "cns"
version = "0.1.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
description = "Search through Rust crates without leaving the terminal."
repository = "https://github.com/adamsky/cns"
keywords = ["crates", "crates-io", "search", "tui", "terminal"]
readme = "README.md"
license = "MIT"

[dependencies]
tui = { version = "0.14", default-features = false, features = ["crossterm"] }
crossterm = "0.19.0"
crates_io_api = "0.7.0"
webbrowser = "0.5.5"
curl = "0.4.34"
strip_markdown = "0.2.0"
chrono = "0.4.19"
