[package]
name = "cns"
version = "0.1.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
description = "Search through Rust crates without leaving the terminal."
repository = "https://github.com/adamsky/cns"
keywords = ["crates", "crates-io", "search", "tui", "terminal"]
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.38"
tui = { version = "0.14", default-features = false, features = ["crossterm"] }
crossterm = "0.19.0"
consecrates = "0.1.0"
http_req  = { version = "0.7.2", default-features = false, features = ["rust-tls"] }
chrono = "0.4.19"
webbrowser = "0.5.5"
