[package]
name = "cns"
version = "0.1.2"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
edition = "2018"
description = "Search for Rust crates without leaving the terminal."
repository = "https://github.com/adamsky/cns"
keywords = ["crates", "crates-io", "search", "tui", "terminal"]
readme = "README.md"
license = "MIT"

[features]
default = ["clipboard"]

[dependencies]
consecrates = "0.1.1"
anyhow = "1.0.89"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
crossterm = "0.28.1"
http_req  = { version = "0.13.0", default-features = false, features = ["rust-tls"] }
chrono = "0.4.38"
webbrowser = "1.0.2"
clipboard = { version = "0.5.0", optional = true }
